# amur-code

./: .env.example  README.md  docker-compose.yml
Output/: README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: ai_generation.py  ai_models.py  document_extract.py  main.py  models.py  pptx_export.py  pptx_import.py  seed.py  storage.py  validation.py
backend/app/pptx_to_json/: __init__.py  normalizer.py  parser.py  schemas.py  service.py  utils.py
backend/app/routers/: ai.py  assets.py  presentations.py  templates.py
backend/storage/presentations/: presentation_starter.json
backend/storage/templates/: template_business_01.json
docs/: api-integration.md
examples/: Запрос_Ответ  Яндекс ART_v3.docx  Запрос_Ответ Stable Diffusion_v3.docx  Запрос_Ответ Леопольд_v3.docx
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/components/: AcIcon.vue  SelectChip.vue
frontend/src/components/editor/: ElementFrame.vue  ElementRenderer.vue  SlideCanvas.vue
frontend/src/components/inspector/: ColorChip.vue  DocumentInspector.vue  ElementInspector.vue  InspectorPanel.vue  SlideInspector.vue
frontend/src/core/: commands.js  emu.js  factories.js  fonts.js  ids.js  textRoles.js  validation.js
frontend/src/router/: index.js
frontend/src/stores/: document.js  editor.js
frontend/src/styles/: app.css
frontend/src/views/: HomeView.vue  PresentationEditor.vue  TemplateEditor.vue
(+7 files in other folders)
